--- a/styles/globals.css
+++ b/styles/globals.css
@@ -254,7 +254,7 @@ a {
 
 .big-card-container {
   position: fixed;
-  top: 15vh;
+  top: 18vh;
   left: 0%;
   height: 85vh;
   width: 100vw;
@@ -282,10 +282,10 @@ a {
   margin: 15px;
   transition: transform 5s ease-in-out;
 }
-
+/* 
 .big-image:hover {
   transform: scale(1.05);
-}
+} */
 
 
 
@@ -296,9 +296,9 @@ a {
   max-width: 16vw;
   background: rgb(216, 216, 216);
   border-radius: 1vh;
-  height: 45vh;
+  height: 45vmin;
   color: rgb(37, 37, 37);
-  margin-top: -2vh;
+  margin-top: 9vmin;
 }
 
 .sub-panel {
@@ -385,7 +385,7 @@ a {
 .attribute-value {
   text-align: right;
   margin-right: 15px;
-  font-style: oblique;
+  /* font-style: oblique; */
 }
 
 .wallet-list {
@@ -401,7 +401,32 @@ a {
   font-style: oblique;
   text-align: left;
   margin: 2px;
-  margin-left: 0px;
+  margin-left: -20px;
+}
+
+.progress-bar-container {
+  width: 40%;
+  margin: auto;
+}
+.progress-bar {
+  height: 10px;
+  width: 0%;
+  background-color: grey;
+  animation: mintloading 22s ease-in-out forwards;
+}
+
+@keyframes mintloading {
+  0% { 
+    width: 0%;
+    background-color: grey;
+  }
+  20% { width: 40%}
+  50% { width: 65%}
+  80% { width: 78%}
+  100% { 
+    width: 98%;
+    background-color: limegreen;
+  }
 }
 
 /* big grids */
@@ -415,6 +440,7 @@ a {
 }
 
 .gallery-grid {
+  overflow: scroll;
   display: grid;
   grid-template-columns: 20% 20% 20% 20% 20%;
 }
