--- a/styles/globals.css
+++ b/styles/globals.css
@@ -363,13 +363,18 @@ a {
 .back-button {
   width: 20px;
   height: 20px;
-  background-color: rgb(222, 222, 222);
+  background-color: rgb(200, 200, 200);
   border-radius: 100%;
   position: absolute;
   color: black;
   text-align: center;
   top: 2vh;
   right: -4%;
+  font-size: 10px;
+}
+
+.back-button span {
+  margin-right: 1.2px;
 }
 
 .back-button:hover {
